--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,35 @@
-name: Frontend App
- 
-env:
-  APP_NAME: frontend-app
-  IMAGE_TAG: "dev-${{github.run_number}}"
+name: Frontend App CI/CD
 
 on:
   push:
     branches:
       - main
-      - dev
-      - feature-*
+    tags:
+      - 'dev-[0-9].[0-9].[0-9]'
+      - 'prod-[0-9].[0-9].[0-9]'
+  workflow_dispatch:
+
+env:
+  APP_NAME: frontend-app
 
 jobs:
   buildAndDeploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Determine Environment and Image Tag
+        id: env-image-tag
+        run: |
+          if [[ $GITHUB_REF == refs/tags/prod-* ]]; then
+            echo "ENV=prod" >> $GITHUB_ENV
+            echo "IMAGE_TAG=prod-${{github.run_number}}" >> $GITHUB_ENV
+          else
+            echo "ENV=dev" >> $GITHUB_ENV
+            echo "IMAGE_TAG=dev-${{github.run_number}}" >> $GITHUB_ENV
+          fi
+
       - name: Checkout app-configs repository
         uses: actions/checkout@v2
         with:
@@ -25,7 +38,7 @@ jobs:
           token: ${{ secrets.GIT_PAT }}
           path: app-configs
 
-      - name: Run build script
+      - name: Build and Push Docker image
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -35,10 +48,10 @@ jobs:
           chmod +x app-configs/scripts/build.sh
           app-configs/scripts/build.sh
 
-      - name: Run image tag script
+      - name: Update Image Tag
         env: 
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
-          ENV: dev
+          ENV: ${{ env.ENV }}
           APP_NAME: ${{ env.APP_NAME }}
         run: | 
           chmod +x app-configs/scripts/update_imagetag.sh
